fix: index page spacing

--- a/index.css
+++ b/index.css
@@ -80,15 +80,15 @@ a {
 
 .parent {
   display: grid;
-  grid-template-columns: repeat(5, 1fr);
-  grid-template-rows: repeat(5, 1fr);
-  grid-column-gap: 5px;
+  grid-template-columns: 0.4fr 1fr;
+  grid-template-rows: repeat(2, 1fr);
+  grid-column-gap: 15px;
   grid-row-gap: 0px;
   }
   
-  .div1 { grid-area: 1 / 1 / 6 / 2; }
-  .div2 { grid-area: 4 / 2 / 6 / 6; }
-  .div3 { grid-area: 1 / 2 / 4 / 6; }
+  .div1 { grid-area: 1 / 1 / 3 / 2; }
+  .div3 { grid-area: 1 / 2 / 2 / 3; }
+  .div2 { grid-area: 2 / 2 / 3 / 3; }
 
 
 h5 {
